// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ddl/alter-function.sql 1`] = `
"alter function get_count(integer)
  cost 100;

-- SET ROWS
alter function get_books(integer)
  rows 100;

-- VOLATILE / STABLE / IMMUTABLE
alter function compute_tax(numeric)
  volatile;

alter function get_config(text)
  stable;

alter function format_name(text, text)
  immutable;

-- RENAME TO
alter function get_count(integer) rename to count_items;

-- OWNER TO
alter function get_count owner to admin;

-- SET SCHEMA
alter function get_count set schema reporting;
"
`;

exports[`fixtures > ddl/alter-table-extended.sql 1`] = `
"-- RENAME COLUMN
alter table users rename column email to email_address;

-- RENAME TABLE
alter table users rename to customers;

-- ALTER COLUMN TYPE
alter table products
  alter column price type numeric(12, 4);

-- SET DEFAULT
alter table users
  alter column active set default true;

-- DROP DEFAULT
alter table users
  alter column active drop default;

-- SET NOT NULL
alter table orders
  alter column status set not null;

-- DROP NOT NULL
alter table orders
  alter column notes drop not null;

-- ADD COLUMN
alter table users
  add column phone text;

alter table users
  add column verified boolean not null default false;

-- DROP COLUMN
alter table users
  drop column phone;

alter table users
  drop column if exists legacy_field;

-- ADD CONSTRAINT (table-level)
alter table order_items
  add constraint fk_order foreign key (order_id) references orders (id);

alter table products
  add constraint price_positive check (price > 0);

alter table users
  add constraint users_email_unique unique (email);

-- DROP CONSTRAINT
alter table products
  drop constraint price_positive;

alter table products
  drop constraint old_check;
"
`;

exports[`fixtures > ddl/column-constraints.sql 1`] = `
"-- NOT NULL, PRIMARY KEY, UNIQUE, DEFAULT
create table orders (
  id integer primary key,
  customer_id integer not null,
  status text default 'pending',
  code text unique,
  amount numeric(10, 2) not null
);

-- CHECK constraint
create table products (
  id integer primary key,
  price numeric(10, 2) check (price > 0),
  quantity integer check (quantity >= 0)
);

-- FOREIGN KEY — column-level
create table order_items (
  id integer primary key,
  order_id integer references orders (id) on delete cascade,
  product_id integer references products (id) on update restrict
);

-- FOREIGN KEY — table-level
create table order_items2 (
  id integer,
  order_id integer,
  primary key (id),
  foreign key (order_id) references orders (id)
);

-- Named constraint
create table employees (
  id integer,
  salary numeric(10, 2),
  constraint employees_pkey primary key (id),
  constraint salary_positive check (salary > 0)
);

-- GENERATED columns
create table sales (
  id integer primary key,
  quantity integer not null,
  unit_price numeric(10, 2) not null,
  total numeric generated always as (quantity * unit_price) stored
);

-- IDENTITY column
create table seq_test (
  id integer generated always as identity,
  name text
);

-- DEFERRABLE constraints
create table transfers (
  id integer primary key,
  from_account integer,
  to_account integer,
  constraint fk_from foreign key (from_account) references accounts (id) deferrable initially deferred,
  constraint fk_to foreign key (to_account) references accounts (id) deferrable initially immediate
);
"
`;

exports[`fixtures > ddl/column-types.sql 1`] = `
"-- Type modifiers (varchar length, numeric precision/scale)
create table products (
  name varchar(100),
  description text,
  price numeric(10, 2),
  quantity integer,
  tags text[],
  created_at timestamptz
);
"
`;

exports[`fixtures > ddl/comments.sql 1`] = `
"-- COMMENT ON TABLE
comment on table books is 'Book catalog';

-- COMMENT ON COLUMN
comment on column books.title is 'The book''s title';

-- COMMENT ON SCHEMA
comment on schema public is 'Public schema';

-- COMMENT ON FUNCTION
comment on function get_count is 'Returns count for given id';

-- Remove a comment (IS NULL)
comment on table temp_data is null;

-- COMMENT ON VIEW
comment on view active_users is 'Users with active accounts';

-- COMMENT ON INDEX
comment on index idx_books_author is 'Author lookup index';

-- COMMENT ON SEQUENCE
comment on sequence order_seq is 'Order ID sequence';

-- COMMENT ON TYPE
comment on type order_status is 'Possible order states';

-- COMMENT ON DATABASE
comment on database mydb is 'Main application database';
"
`;

exports[`fixtures > ddl/create-function.sql 1`] = `
"-- Simple SQL function
create function get_book_count(p_author_id integer)
returns bigint
language sql
as $$
  select count(*) from books where author_id = p_author_id
$$;

-- Function with multiple parameters
create function full_name(first_name text, last_name text)
returns text
language sql
as $$
  select first_name || ' ' || last_name
$$;

-- Function with OUT parameters
create function get_stats(p_author_id integer, out book_count bigint, out avg_price numeric)
language sql
as $$
  select count(*), avg(price) from books where author_id = p_author_id
$$;

-- Function with INOUT parameter
create function increment(inout val integer)
language sql
as $$
  select val + 1
$$;

-- RETURNS TABLE
create function books_by_author(p_author_id integer)
returns table (id integer, title text, price numeric)
language sql
as $$
  select id, title, price from books where author_id = p_author_id
$$;

-- STABLE, STRICT, SECURITY DEFINER
create function safe_divide(a numeric, b numeric)
returns numeric
language sql
as $$
  select a / b
$$;
"
`;

exports[`fixtures > ddl/create-index.sql 1`] = `
"-- Basic index
create index idx_books_author on books (author_id);

-- Unique index
create unique index idx_users_email on users (email);

-- Multi-column index
create index idx_orders_customer_status on orders (customer_id, status);

-- Descending column
create index idx_orders_recent on orders (created_at desc);

-- Expression index
create index idx_users_lower_email on users (lower(email));

-- Partial index (WHERE clause)
create index idx_active_users on users (email) where active = true;

-- INCLUDE columns (covering index)
create index idx_orders_lookup on orders (customer_id) include (status, amount);

-- Specific index method
create index idx_events_data on events using gin (data);

create index idx_locations on places using gist (location);

-- CREATE INDEX CONCURRENTLY
create index concurrently idx_big_table_col on big_table (col);

-- IF NOT EXISTS
create index if not exists idx_books_author on books (author_id);
"
`;

exports[`fixtures > ddl/create-table-as.sql 1`] = `
"-- CREATE TABLE AS SELECT
create table archived_orders as
select
  id,
  customer_id,
  amount
from
  orders
where status = 'cancelled';

-- CREATE MATERIALIZED VIEW
create materialized view mv_active_users as
select
  id,
  name,
  email
from
  users
where active = true;
"
`;

exports[`fixtures > ddl/drop.sql 1`] = `
"-- DROP TABLE
drop table temp_data;

drop table if exists temp_data;

drop table if exists temp_data cascade;

-- DROP INDEX
drop index idx_books_author;

drop index if exists idx_books_author;

drop index if exists idx_large_table;

-- DROP FUNCTION
drop function get_count;

drop function if exists get_count;

-- DROP VIEW (basic — fuller coverage in ddl/views.sql)
drop view if exists old_summary;

-- DROP TYPE
drop type my_status;

drop type if exists my_status cascade;

-- DROP SEQUENCE
drop sequence order_seq;

drop sequence if exists order_seq;
"
`;

exports[`fixtures > ddl/grant-revoke.sql 1`] = `
"-- GRANT on specific tables
grant select, insert on table books
to alice;

grant all privileges on table orders
to bob;

-- GRANT on schema
grant usage on schema myschema
to alice;

-- GRANT on all tables in schema
grant select on all tables in schema public
to alice;

-- GRANT to public
grant execute on function get_count
to PUBLIC;

-- REVOKE
revoke select on table books
from alice;

revoke all privileges on table orders
from bob
cascade;

-- WITH GRANT OPTION
grant select on table books
to alice
with grant option;
"
`;

exports[`fixtures > ddl/policies.sql 1`] = `
"create policy view_own_data
on users
for select
using (user_id = current_user_id());

alter policy view_own_data
on users
using (user_id = current_user_id());

-- WITH CHECK (for INSERT/UPDATE)
create policy insert_own_rows
on orders
for insert
with check (customer_id = current_user_id());

-- USING and WITH CHECK together
create policy manage_own_orders
on orders
for all
using (customer_id = current_user_id())
with check (customer_id = current_user_id());

-- FOR UPDATE
create policy update_own_profile
on users
for update
using (id = current_user_id())
with check (id = current_user_id());

-- FOR DELETE
create policy delete_own_sessions
on sessions
for delete
using (user_id = current_user_id());

-- Permissive vs restrictive
create policy admin_all
on orders
for all
using (true);

create policy restrict_sensitive
on users
for all
using (not is_internal);
"
`;

exports[`fixtures > ddl/refresh-matview.sql 1`] = `
"refresh materialized view mv_active_users;

refresh materialized view concurrently mv_active_users;
"
`;

exports[`fixtures > ddl/roles.sql 1`] = `
"-- CREATE ROLE
create role alice
login password 'secret' nosuperuser;

-- CREATE USER
create user bob
nosuperuser nologin;

-- ALTER ROLE
alter role alice
createdb;

alter role bob
connection limit 10;
"
`;

exports[`fixtures > ddl/rules.sql 1`] = `
"create rule log_insert
as on insert
to orders
do also
  insert into audit_log (event)
  values ('insert');

-- DO INSTEAD (redirect writes to archive)
create rule redirect_update
as on update
to archived_orders
do instead nothing;

-- INSTEAD OF (on a view)
create rule insert_view
as on insert
to user_view
do instead
  insert into users (name, email)
  values (new.name, new.email);

-- BEFORE rule with condition
create rule no_delete
as on delete
to orders
where old.status = 'locked'
do instead nothing;

-- Multiple actions (DO ALSO with multiple statements)
create rule audit_delete
as on delete
to orders
do also
  insert into audit_log (event, record_id)
  values ('delete', old.id);
"
`;

exports[`fixtures > ddl/schema-extension.sql 1`] = `
"-- CREATE SCHEMA
create schema myschema;

create schema if not exists reporting;

create schema myschema authorization alice;

-- CREATE EXTENSION
create extension "uuid-ossp";

create extension if not exists "pgcrypto";
"
`;

exports[`fixtures > ddl/sequences.sql 1`] = `
"-- CREATE SEQUENCE with options
create sequence order_seq
start with 1000
increment by 1
no maxvalue
no cycle;

-- CREATE SEQUENCE minimal
create sequence event_seq;

-- ALTER SEQUENCE
alter sequence order_seq
restart with 1
increment by 5;
"
`;

exports[`fixtures > ddl/triggers.sql 1`] = `
"-- BEFORE INSERT trigger
create trigger check_before_insert
before insert on accounts
for each row
execute function check_account_insert();

-- AFTER UPDATE trigger
create trigger log_update
after update on accounts
for each statement
execute function log_account_change();

-- BEFORE INSERT OR UPDATE
create trigger validate_order
before insert or update on orders
for each row
execute function validate_order_data();

-- Trigger with WHEN condition
create trigger audit_price_change
before update on products
for each row
when (old.price IS DISTINCT FROM new.price)
execute function audit_price();

-- AFTER DELETE
create trigger cleanup_orphans
after delete on orders
for each row
execute function cleanup_order_items();

-- INSTEAD OF trigger on view
create trigger view_insert
instead of insert on v_active_users
for each row
execute function handle_view_insert();

-- CONSTRAINT trigger
create trigger check_fk
after insert on order_items
for each row
execute function check_order_item_fk();
"
`;

exports[`fixtures > ddl/types.sql 1`] = `
"-- CREATE TYPE composite
create type address as (
  street text,
  city varchar(100),
  zip varchar(10)
);

-- CREATE TYPE enum
create type mood as enum (
  'sad',
  'ok',
  'happy'
);

-- ALTER TYPE ADD VALUE
alter type mood add value 'excited' after 'happy';

alter type mood add value if not exists 'meh' before 'ok';
"
`;

exports[`fixtures > ddl/views.sql 1`] = `
"-- Simple CREATE VIEW
create view active_users
as
select
  id,
  name,
  email
from
  users
where active = true;

-- CREATE VIEW with column aliases
create view order_summary
as
select
  id,
  amount,
  status
from
  orders;

-- CREATE OR REPLACE VIEW
create view active_users
as
select
  id,
  name,
  email
from
  users
where
  active = true
  and deleted_at is null;

-- CREATE MATERIALIZED VIEW
create materialized view user_stats as
select
  user_id,
  count(*) as order_count,
  sum(amount) as total_spent
from
  orders
group by
  user_id;

-- REFRESH MATERIALIZED VIEW
refresh materialized view user_stats;

refresh materialized view concurrently user_stats;

-- DROP VIEW
drop view active_users;

drop view if exists old_report;

drop materialized view if exists stale_cache;
"
`;

exports[`fixtures > delete/returning.sql 1`] = `
"-- Basic DELETE (no RETURNING)
delete from sessions
where expires_at < now();

-- DELETE with RETURNING
delete from sessions
where expires_at < now()
returning
  id,
  user_id;

-- DELETE with USING
delete from order_items
using
  orders
where
  order_items.order_id = orders.id
  and orders.status = 'cancelled';
"
`;

exports[`fixtures > dml/call.sql 1`] = `
"-- Simple procedure call
call process_orders();

-- Call with arguments
call update_inventory(product_id => 42, delta => -5);

-- Call with positional args
call send_notification(1, 'hello', true);
"
`;

exports[`fixtures > dml/copy.sql 1`] = `
"copy orders from '/tmp/orders.csv';

copy orders to '/tmp/orders.csv';

copy (
  select
    id
  from
    orders
) to '/tmp/ids.csv';

-- COPY with options
copy orders from '/tmp/orders.csv' (format csv, header true, delimiter ',', null '');

copy orders (id, customer_id, amount) to '/tmp/orders_partial.csv' (format csv, header true);

-- COPY with QUOTE and ESCAPE
copy products from '/tmp/products.csv' (format csv, quote '"', escape '\\\\');
"
`;

exports[`fixtures > dml/cte-dml.sql 1`] = `
"with
  moved as (
    delete from orders
    where status = 'cancelled'
    returning
      id,
      customer_id,
      amount
  )
insert into archived_orders (id, customer_id, amount)
select
  id,
  customer_id,
  amount
from
  moved;

delete from sessions
where (
  select
    id
  from
    updated
);

-- WITH ... INSERT (insert from CTE)
with
  new_data as (
    select
      customer_id,
      sum(amount) as total
    from
      raw_orders
    group by
      customer_id
  )
insert into order_summary (customer_id, total)
select
  customer_id,
  total
from
  new_data;

-- WITH ... UPDATE
update sessions
set active = false
where (
  select
    id
  from
    stale
);
"
`;

exports[`fixtures > dml/cursors.sql 1`] = `
"declare my_cursor cursor for
select
  id,
  name
from
  users;

declare scroll_cursor scroll cursor for
select
  id
from
  orders;

fetch next from my_cursor;

fetch forward 10 from my_cursor;

fetch all from my_cursor;

move prior from scroll_cursor;

close my_cursor;
"
`;

exports[`fixtures > dml/do.sql 1`] = `
"-- DO block with plpgsql (body preserved as-is)
do $$
BEGIN
  RAISE NOTICE 'hello world';
END
$$
language plpgsql;

-- DO block with sql language
do $$
  insert into audit_log (action) values ('startup')
$$
language sql;
"
`;

exports[`fixtures > dml/explain.sql 1`] = `
"explain select
  id
from
  users;

explain analyze select
  id
from
  users;

explain (analyze true, verbose true, format json) select
  id
from
  users;
"
`;

exports[`fixtures > dml/listen-notify.sql 1`] = `
"listen my_channel;

unlisten my_channel;

unlisten *;

notify my_channel;

notify my_channel, 'payload text';
"
`;

exports[`fixtures > dml/lock.sql 1`] = `
"lock table orders in exclusive mode;

lock table orders in access exclusive mode nowait;
"
`;

exports[`fixtures > dml/merge.sql 1`] = `
"-- Basic MERGE: WHEN MATCHED UPDATE, WHEN NOT MATCHED INSERT
merge into target as t
using source as s
on t.id = s.id
when matched then
  update set
    name = s.name,
    updated_at = now()
when not matched then
  insert (id, name, created_at)
  values (s.id, s.name, now());

-- MERGE with DO NOTHING and conditional
merge into inventory as inv
using incoming as inc
on inv.product_id = inc.product_id
when matched and inc.quantity = 0 then
  delete
when matched then
  update set
    quantity = inv.quantity + inc.quantity
when not matched then
  insert (product_id, quantity)
  values (inc.product_id, inc.quantity);

-- MERGE with WHEN NOT MATCHED BY SOURCE (PostgreSQL 15+)
merge into employees as e
using new_roster as nr
on e.id = nr.id
when matched then
  update set
    name = nr.name
when not matched then
  insert (id, name)
  values (nr.id, nr.name)
when not matched by source then
  delete;
"
`;

exports[`fixtures > dml/prepare.sql 1`] = `
"prepare get_user(integer) as
select
  id,
  name
from
  users
where id = $1;

execute get_user(42);

deallocate get_user;

deallocate all;
"
`;

exports[`fixtures > dml/set-show.sql 1`] = `
"-- SET
set search_path = public, myschema;

set work_mem = '64MB';

set local client_encoding = utf8;

-- SET TO DEFAULT
set work_mem to default;

-- RESET
reset search_path;

reset all;

-- SHOW
show work_mem;

show all;
"
`;

exports[`fixtures > dml/transaction.sql 1`] = `
"-- Basic transaction control
begin;

commit;

rollback;

-- Named savepoints
savepoint sp1;

release savepoint sp1;

rollback to savepoint sp1;

-- SET TRANSACTION options
set transaction isolation level serializable;

set transaction read only;

set transaction read write, deferrable;

-- BEGIN with options
begin isolation level read committed;

begin read only;

-- Two-phase commit
prepare transaction 'txn-1234';

commit prepared 'txn-1234';

rollback prepared 'txn-1234';
"
`;

exports[`fixtures > dml/truncate.sql 1`] = `
"truncate table sessions;

truncate table sessions, temp_orders restart identity cascade;
"
`;

exports[`fixtures > insert/default-values.sql 1`] = `
"insert into logs
default values;

insert into logs
default values
returning
  id,
  created_at;
"
`;

exports[`fixtures > insert/on_conflict.sql 1`] = `
"insert into users (id, email)
values (1, 'alice@example.com')
on conflict do nothing;

insert into users (id, email, updated_at)
values (1, 'alice@example.com', now())
on conflict (id) do update
set
  email = excluded.email,
  updated_at = excluded.updated_at;

-- ON CONFLICT on constraint name
insert into users (id, email)
values (1, 'alice@example.com')
on conflict on constraint users_email_key do nothing;

-- ON CONFLICT DO UPDATE with WHERE (partial index target)
insert into products (id, name, price)
values (1, 'Widget', 9.99)
on conflict (id) do update
set
  name = excluded.name,
  price = excluded.price;

-- ON CONFLICT DO UPDATE with WHERE on SET (filter which rows update)
insert into inventory (product_id, quantity)
values (1, 10)
on conflict (product_id) do update
set quantity = inventory.quantity + excluded.quantity
where inventory.quantity < 1000;
"
`;

exports[`fixtures > insert/returning.sql 1`] = `
"insert into users (name, email)
values ('Alice', 'alice@example.com')
returning
  id;

insert into orders (customer_id, amount)
values (42, 150.00)
returning
  id,
  created_at;
"
`;

exports[`fixtures > insert/values.sql 1`] = `
"insert into orders (customer_id, total)
values (1, 99.99);

insert into products (name, price, category)
values
  ('Widget', 9.99, 'tools'),
  ('Gadget', 19.99, 'electronics'),
  ('Doohickey', 4.99, 'misc');

-- INSERT ... SELECT
insert into archived_orders (id, customer_id, amount)
select
  id,
  customer_id,
  amount
from
  orders
where status = 'closed';

-- DEFAULT VALUES
insert into audit_log
default values;

-- OVERRIDING SYSTEM VALUE
insert into users (id, email) overriding system value
values (100, 'admin@example.com');

-- OVERRIDING USER VALUE
insert into users (id, email) overriding user value
values (101, 'user@example.com');
"
`;

exports[`fixtures > p4/create-aggregate.sql 1`] = `
"create aggregate my_avg (double precision) (
  sfunc = float8_accum,
  stype = double precision[],
  initcond = '{0,0,0}'
);
"
`;

exports[`fixtures > p4/create-collation.sql 1`] = `
"create collation my_coll (locale = 'en-US');

create collation my_coll2 from "en-US";
"
`;

exports[`fixtures > p4/create-operator.sql 1`] = `
"create operator === (
  leftarg = integer,
  rightarg = integer,
  procedure = int4eq
);
"
`;

exports[`fixtures > p4/foreign-data-wrappers.sql 1`] = `
"create server my_server
foreign data wrapper postgres_fdw options (host 'localhost', port '5432');

create foreign table remote_orders (
  id integer,
  amount numeric
)
server my_server options (table_name 'orders');

create user mapping for current_user
server my_server options (user 'remote_user', password 'secret');

import foreign schema public
from server my_server
into local_schema;
"
`;

exports[`fixtures > p4/interval-modifiers.sql 1`] = `
"select
  interval '1' year;

select
  interval '1:30' hour to minute;

select
  interval '1 2:03:04' day to second;

select
  interval '5 years' year to month;
"
`;

exports[`fixtures > p4/logical-replication.sql 1`] = `
"create publication my_pub
for table orders, users;

create subscription my_sub
connection 'host=localhost dbname=mydb'
publication my_pub;

drop subscription my_sub;
"
`;

exports[`fixtures > p4/partitioning.sql 1`] = `
"create table orders (
  id integer not null,
  region text not null
)
partition by range (region);

create table orders_us
partition of orders
for values from ('US') to ('ZZ');

create table orders_default
partition of orders
default;

create table measurements (
  city_id integer not null,
  logdate date not null
)
partition by list (city_id);

-- HASH partitioning
create table events (
  id integer not null,
  user_id integer not null
)
partition by hash (user_id);

create table events_0
partition of events
for values with (modulus 4, remainder 0);

create table events_1
partition of events
for values with (modulus 4, remainder 1);

-- LIST partition with IN bounds
create table orders_eu
partition of orders
for values in ('DE', 'FR', 'UK');
"
`;

exports[`fixtures > p4/recursive-cte-search-cycle.sql 1`] = `
"with recursive
  t as (
    select
      id,
      parent_id
    from
      tree
    union all
    select
      tree.id,
      tree.parent_id
    from
      tree
      join t on t.id = tree.parent_id
  )
  search breadth first by id set ordercol
  cycle id set is_cycle using path
select
  *
from
  t;
"
`;

exports[`fixtures > p4/security-label.sql 1`] = `
"security label for my_provider on table orders is 'sensitive';

security label for my_provider on column orders.amount is 'pii';
"
`;

exports[`fixtures > p4/table-like.sql 1`] = `
"create table orders_copy (
  like orders including all
);

create table orders_partial (
  extra_col text,
  like orders including defaults including indexes
);
"
`;

exports[`fixtures > p4/tablesample.sql 1`] = `
"select
  id,
  name
from
  users tablesample bernoulli(10);

select
  count(*)
from
  orders tablesample system(5) repeatable (42);
"
`;

exports[`fixtures > p4/vacuum-analyze.sql 1`] = `
"vacuum orders;

vacuum verbose orders;

vacuum (full, analyze) orders;

analyze orders;

cluster orders using orders_region_idx;

reindex table orders;

reindex (verbose) table orders;
"
`;

exports[`fixtures > select/advanced.sql 1`] = `
"-- INTERVAL literals
select
  interval '1 day',
  interval '2 hours 30 minutes'
from
  t;

-- :: cast style (type cast)
select
  price::numeric,
  name::text,
  '2024-01-01'::date
from
  t;

-- Array subscript (single index and slice)
select
  arr[1],
  arr[2:4],
  arr[:3],
  arr[1:]
from
  t;

-- Named function arguments
select
  make_date(year => 2024, month => 1, day => 15);

-- ROLLUP / CUBE / GROUPING SETS
select
  dept,
  sum(salary)
from
  emp
group by
  rollup(dept);

select
  dept,
  job,
  sum(salary)
from
  emp
group by
  cube(dept, job);

select
  dept,
  job,
  sum(salary)
from
  emp
group by
  grouping sets((dept, job), (dept), ());

-- ARRAY constructor
select
  array[1, 2, 3];

select
  array['a', 'b', 'c'];

-- ROW constructor
select
  (1, 'alice', true);

-- SQL value functions
select
  current_date,
  current_timestamp,
  current_user,
  session_user
from
  t;

-- COALESCE / NULLIF / GREATEST / LEAST
select
  coalesce(price, 0.00),
  nullif(status, 'deleted'),
  greatest(a, b, c),
  least(x, y, z)
from
  t;

-- CASE searched form
select
  id,
  case
    when price < 10 then 'budget'
    when price < 50 then 'mid-range'
  else 'premium'
  end as tier
from
  books;

-- CASE simple form
select
  id,
  case status
    when 'active' then 1
    when 'inactive' then 0
  else -1
  end
from
  users;

-- AT TIME ZONE
select
  created_at at time zone 'UTC',
  updated_at at time zone 'America/New_York'
from
  events;

-- OVERLAY
select
  overlay(name placing 'XXX' from 2 for 3)
from
  users;
"
`;

exports[`fixtures > select/aggregate-filter.sql 1`] = `
"select
  author_id,
  count(*) filter (where in_stock = 1) as in_stock_count,
  count(*) filter (where in_stock = 0) as out_of_stock_count
from
  books
group by
  author_id;

select
  author_id,
  string_agg(title, ', ' order by title) as titles
from
  books
group by
  author_id;

-- FILTER with OVER (window aggregate)
select
  dept,
  sum(salary) filter (where active = true) over (partition by dept) as active_payroll
from
  employees;

-- Multiple aggregates with FILTER in one query
select
  count(*) filter (where status = 'open') as open_count,
  count(*) filter (where status = 'closed') as closed_count,
  sum(amount) filter (where status = 'open') as open_total
from
  tickets;

-- ORDER BY inside aggregate without FILTER
select
  dept,
  array_agg(name order by name) as members
from
  employees
group by
  dept;

-- DISTINCT inside aggregate
select
  count(distinct customer_id) as unique_customers,
  sum(amount) as total
from
  orders;
"
`;

exports[`fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from
  books
where in_stock = true
order by
  price asc;

select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from
  books as b
  join authors as a on b.author_id = a.id
where b.price < 50;

-- DISTINCT (non-ON form)
select distinct
  author_id
from
  books;

select distinct
  author_id,
  category
from
  books
order by
  author_id;

-- Parameterized queries
select
  id,
  email
from
  users
where
  id = $1
  and active = $2;

-- All JOIN types
select
  *
from
  a
  join b on a.id = b.a_id
  left join c on c.b_id = b.id
  right join d on d.id = c.d_id
  full join e on e.id = a.e_id
  cross join f
  natural join g;

-- USING
select
  b.id,
  b.title,
  a.name
from
  books as b
  join authors as a using (author_id);
"
`;

exports[`fixtures > select/comments.sql 1`] = `
"-- single leading comment
select
  id,
  title
from
  books;

-- comment before second statement
-- multi-line comment block
select
  id
from
  orders;

select
  id
from
  users;

-- inline trailing comment
/* block comment before statement */
select
  id
from
  events;

/* multi-line
   block comment */
select
  id
from
  sessions;

select
  id
from
  accounts; /* trailing block comment */
"
`;

exports[`fixtures > select/cte.sql 1`] = `
"-- Basic multi-CTE
with
  active_users as (
    select
      id,
      name
    from
      users
    where active = true
  ),
  recent_orders as (
    select
      customer_id,
      sum(amount) as total
    from
      orders
    where created_at > now() - interval '30 days'
    group by
      customer_id
  )
select
  u.name,
  ro.total
from
  active_users as u
  join recent_orders as ro on u.id = ro.customer_id;

-- WITH RECURSIVE
with recursive
  org_tree as (
    select
      id,
      name,
      parent_id,
      0 as depth
    from
      departments
    where parent_id is null
    union all
    select
      d.id,
      d.name,
      d.parent_id,
      t.depth + 1
    from
      departments as d
      join org_tree as t on d.parent_id = t.id
  )
select
  id,
  name,
  depth
from
  org_tree
order by
  depth,
  name;

-- CTE with DISTINCT and set op
with
  top_authors as (
    select
      author_id,
      count(*) as book_count
    from
      books
    group by
      author_id
    having count(*) > 5
  )
select
  a.name,
  t.book_count
from
  authors as a
  join top_authors as t on a.id = t.author_id
order by
  t.book_count desc;
"
`;

exports[`fixtures > select/distinct-on.sql 1`] = `
"select distinct on (author_id)
  id,
  author_id,
  title
from
  books
order by
  author_id,
  price asc;
"
`;

exports[`fixtures > select/for-update.sql 1`] = `
"select
  id,
  title
from
  books
where id = 1
for update;

select
  id,
  title
from
  books
for share skip locked;

select
  id
from
  orders
for no key update of orders nowait;

-- FOR KEY SHARE
select
  id
from
  accounts
for key share;

-- FOR UPDATE OF multiple tables
select
  o.id,
  i.id
from
  orders as o
  join order_items as i on o.id = i.order_id
for update of o;
"
`;

exports[`fixtures > select/functions.sql 1`] = `
"-- SUBSTRING: regex form (FROM pattern)
select
  substring(title from 'pg.*')
from
  books;

-- SUBSTRING: positional form (FROM pos FOR len)
select
  substring(title from 1 for 5)
from
  books;

-- EXTRACT
select
  extract(year from created_at),
  extract(month from created_at),
  extract(day from created_at)
from
  orders;

-- TRIM variants
select
  trim(leading ' ' from name),
  trim(trailing ' ' from name),
  trim(both ' ' from name)
from
  users;

-- TRIM without chars (single-arg form)
select
  trim(name),
  ltrim(name),
  rtrim(name)
from
  users;

-- POSITION
select
  position('.' in email)
from
  users;

-- AT TIME ZONE
select
  created_at at time zone 'UTC',
  updated_at at time zone 'America/New_York'
from
  events;

-- OVERLAY
select
  overlay(name placing 'XXX' from 2 for 3)
from
  users;

-- CURRENT_DATE / CURRENT_TIMESTAMP / other SQL value functions
select
  current_date,
  current_timestamp,
  current_time
from
  t;

select
  localtime,
  localtimestamp,
  current_user,
  session_user
from
  t;

-- Regular functions (no special rewriting needed)
select
  upper(name),
  lower(email),
  length(title)
from
  books;

select
  coalesce(price, 0.00),
  nullif(status, 'deleted')
from
  products;

select
  greatest(a, b, c),
  least(x, y)
from
  scores;

select
  date_trunc('month', created_at)
from
  orders;

select
  now(),
  to_char(price, 'FM999.00'),
  to_timestamp(epoch)
from
  t;

select
  regexp_replace(name, '\\s+', ' ', 'g')
from
  users;
"
`;

exports[`fixtures > select/grouping-func.sql 1`] = `
"select
  region,
  product,
  grouping(region, product) as grp,
  sum(amount)
from
  sales
group by
  grouping sets((region, product), (region), ());
"
`;

exports[`fixtures > select/in-between.sql 1`] = `
"select
  id,
  title
from
  books
where id in (1, 2, 3);

select
  id,
  title
from
  books
where id not in (1, 2, 3);

select
  id,
  title,
  price
from
  books
where price between 10 and 50;

select
  id,
  title,
  price
from
  books
where price not between 10 and 50;

-- ANY / ALL
select
  id,
  title
from
  books
where price = any(array[9.99, 19.99, 29.99]);

select
  id,
  title
from
  books
where (
  select
    price
  from
    books
  where author_id = 5
);

-- IS NULL / IS NOT NULL
select
  id,
  title
from
  books
where deleted_at is null;

select
  id,
  title
from
  books
where deleted_at is not null;

-- IS DISTINCT FROM / IS NOT DISTINCT FROM
select
  id
from
  t
where a IS DISTINCT FROM b;

select
  id
from
  t
where a IS NOT DISTINCT FROM b;

-- SIMILAR TO
select
  id,
  email
from
  users
where email SIMILAR TO '%@(gmail|yahoo)\\.com';

select
  id,
  email
from
  users
where email NOT SIMILAR TO '%@(gmail|yahoo)\\.com';
"
`;

exports[`fixtures > select/json-functions.sql 1`] = `
"select
  json_query(data, '$.name')
from
  events;

select
  json_exists(data, '$.active')
from
  events;

select
  json_value(data, '$.price' returning numeric)
from
  events;
"
`;

exports[`fixtures > select/json-operators.sql 1`] = `
"-- -> and ->> (key access)
select
  data -> 'name',
  data ->> 'email'
from
  users;

-- #> and #>> (path access)
select
  data #> '{address,city}',
  data #>> '{address,zip}'
from
  users;

-- @> and <@ (containment)
select
  id
from
  orders
where data @> '{"status": "active"}';

select
  id
from
  orders
where '{"status": "active"}' <@ data;

-- ? (key exists)
select
  id
from
  events
where data ? 'payload';

-- ?| (any key) and ?& (all keys)
select
  id
from
  events
where data ?| array['a', 'b'];

select
  id
from
  events
where data ?& array['a', 'b'];

-- Combined JSON path
select
  id,
  data -> 'user' ->> 'name' as user_name
from
  events;
"
`;

exports[`fixtures > select/lateral.sql 1`] = `
"select
  b.id,
  r.avg_price
from
  books as b,
  lateral (
    select
      avg(price) as avg_price
    from
      books
    where author_id = b.author_id
  ) as r;
"
`;

exports[`fixtures > select/like.sql 1`] = `
"select
  id,
  title
from
  books
where title LIKE 'The%';

select
  id,
  title
from
  books
where title NOT LIKE 'The%';

select
  id,
  email
from
  users
where email ILIKE '%@example.com';

select
  id,
  email
from
  users
where email NOT ILIKE '%@example.com';

-- Multiple predicates combined
select
  id,
  title
from
  books
where
  title ILIKE '%postgres%'
  and isbn NOT LIKE '978-0%';
"
`;

exports[`fixtures > select/named-window.sql 1`] = `
"-- Named WINDOW clause
select
  id,
  author_id,
  price,
  sum(price) over w as running_total,
  row_number() over w as rn
from
  books
window
  w as (partition by author_id order by price);

-- Multiple named windows and mixed inline
select
  id,
  dept,
  salary,
  row_number() over w1 as dept_rank,
  sum(salary) over w2 as dept_total,
  avg(salary) over (partition by dept) as dept_avg
from
  employees
window
  w1 as (partition by dept order by salary desc),
  w2 as (partition by dept);
"
`;

exports[`fixtures > select/select-into.sql 1`] = `
"select
  id,
  name
into
  archive_users
from
  users
where active = false;
"
`;

exports[`fixtures > select/set_ops.sql 1`] = `
"select
  id,
  name
from
  customers
union
select
  id,
  name
from
  prospects;

select
  product_id
from
  orders
intersect
select
  product_id
from
  featured_products;

select
  user_id
from
  premium_users
except
select
  user_id
from
  suspended_users;

select
  id,
  name
from
  table_a
union all
select
  id,
  name
from
  table_b;

-- Chained UNION (3 operands)
select
  id,
  name
from
  customers
union
select
  id,
  name
from
  prospects
union
select
  id,
  name
from
  leads;

-- INTERSECT ALL
select
  product_id
from
  orders
intersect all
select
  product_id
from
  returns;

-- EXCEPT ALL
select
  user_id
from
  subscribers
except all
select
  user_id
from
  unsubscribed;

-- Set op with ORDER BY and LIMIT on the whole result
select
  id,
  name
from
  customers
union all
select
  id,
  name
from
  prospects;

-- CTE + UNION
select
  id,
  name
from
  active
union all
select
  id,
  name
from
  archived_users;
"
`;

exports[`fixtures > select/subqueries.sql 1`] = `
"-- Subquery in FROM
select
  sub.avg_price
from
  (
    select
      avg(price) as avg_price
    from
      books
  ) as sub;

-- Scalar subquery in column list
select
  id,
  (
    select
      count(*)
    from
      orders
    where customer_id = c.id
  ) as order_count
from
  customers as c;

-- EXISTS
select
  id,
  name
from
  customers
where exists (
  select
    1
  from
    orders
  where orders.customer_id = customers.id
);

-- NOT EXISTS
select
  id,
  name
from
  customers
where
  not exists (
    select
      1
    from
      orders
    where orders.customer_id = customers.id
  );

-- Subquery in WHERE with IN
select
  id,
  title
from
  books
where (
  select
    id
  from
    authors
  where country = 'US'
);

-- Correlated subquery
select
  id,
  title,
  price
from
  books as b
where price > (
  select
    avg(price)
  from
    books
  where author_id = b.author_id
);
"
`;

exports[`fixtures > select/window.sql 1`] = `
"select
  id,
  author_id,
  price,
  row_number() over (partition by author_id order by price desc) as rank
from
  books;

select
  id,
  price,
  sum(price) over (order by id rows between unbounded preceding and current row) as running_total
from
  books;

select
  id,
  author_id,
  price,
  rank() over (partition by author_id order by price desc) as price_rank,
  avg(price) over (partition by author_id) as avg_price
from
  books;

-- RANGE frame
select
  id,
  price,
  avg(price) over (order by price range between unbounded preceding and current row) as running_avg
from
  books;

-- GROUPS frame
select
  dept,
  salary,
  count(*) over (order by dept groups between 1 preceding and 1 following) as nearby_count
from
  emp;

-- UNBOUNDED FOLLOWING
select
  id,
  price,
  sum(price) over (order by id rows between current row and unbounded following) as suffix_sum
from
  books;

-- N PRECEDING / N FOLLOWING (moving window)
select
  id,
  price,
  avg(price) over (order by id rows between 2 preceding and 2 following) as moving_avg
from
  books;

-- No frame — pure PARTITION BY
select
  id,
  author_id,
  count(*) over (partition by author_id) as author_book_count
from
  books;
"
`;

exports[`fixtures > select/xml-functions.sql 1`] = `
"select
  xmlelement(name foo, 'bar');

select
  xmlelement(name order, xmlattributes(o.orderid), o.ordername)
from
  orders as o;

select
  xmlforest(title, author as written_by)
from
  books;

select
  xmlconcat(xmlelement(name a, 1), xmlelement(name b, 2));

select
  xmlagg(xmlelement(name item, title) order by title)
from
  books;
"
`;

exports[`fixtures > update/returning.sql 1`] = `
"update users
set active = false
where last_login < now() - interval '1 year'
returning
  id,
  email;

-- UPDATE with FROM
update order_items
set price = p.price
from
  products as p
where order_items.product_id = p.id;

-- UPDATE with FROM and RETURNING
update employees
set salary = salary * 1.1
from
  departments as d
where
  employees.dept_id = d.id
  and d.name = 'Engineering'
returning
  employees.id,
  employees.salary;

-- UPDATE with subquery in SET
update users
set status = (
  select
    status
  from
    status_map
  where code = users.status_code
)
where status_code is not null;
"
`;

exports[`options > sqlCommaStyle: leading 1`] = `
"select
  id
  , title
  , price
  , author_id
  , in_stock
from
  books
where in_stock = true;
"
`;

exports[`options > sqlCommaStyle: trailing (default) 1`] = `
"select
  id,
  title,
  price,
  author_id,
  in_stock
from
  books
where in_stock = true;
"
`;

exports[`options > sqlDensity: compact (single WHERE inline) 1`] = `
"select
  id
from
  books
where price < 50;
"
`;

exports[`options > sqlDensity: spacious (WHERE indented) 1`] = `
"select
  id,
  title,
  price
from
  books
where
  in_stock = true
  and price < 50
order by
  price asc
limit 10;
"
`;

exports[`options > sqlKeywordCase: lower (default) 1`] = `
"select
  id,
  title,
  price
from
  books
where
  in_stock = true
  and price < 50
order by
  price asc
limit 10;
"
`;

exports[`options > sqlKeywordCase: upper 1`] = `
"SELECT
  id,
  title,
  price
FROM
  books
WHERE
  in_stock = true
  AND price < 50
ORDER BY
  price ASC
LIMIT 10;
"
`;

exports[`shared fixtures > dml/delete.sql 1`] = `
"delete from books
where
  in_stock = 0
  and price < 5;
"
`;

exports[`shared fixtures > dml/insert.sql 1`] = `
"insert into books (title, author_id, price, in_stock)
values ('The Pragmatic Programmer', 1, 39.99, 1);
"
`;

exports[`shared fixtures > dml/update.sql 1`] = `
"update books
set
  price = price * 0.9,
  in_stock = 1
where
  author_id = 1
  and price > 20;
"
`;

exports[`shared fixtures > select/aggregates.sql 1`] = `
"select
  author_id,
  count(*) as book_count,
  avg(price) as avg_price
from
  books
where in_stock = 1
group by
  author_id
having count(*) > 5
order by
  book_count desc;
"
`;

exports[`shared fixtures > select/basic.sql 1`] = `
"select
  id,
  title,
  price
from
  books
where in_stock = 1
order by
  price asc;

select
  id,
  title,
  price
from
  books
where
  in_stock = 1
  and price < 50
order by
  price desc;
"
`;

exports[`shared fixtures > select/case.sql 1`] = `
"select
  id,
  case
    when price < 10 then 'Budget'
    when price < 30 then 'Mid'
  else 'Premium'
  end as tier
from
  books;

select
  id,
  case genre_id
    when 1 then 'Fiction'
    when 2 then 'Non-Fiction'
  else 'Other'
  end as genre
from
  books;
"
`;

exports[`shared fixtures > select/cte.sql 1`] = `
"with
  top_authors as (
    select
      author_id,
      count(*) as book_count
    from
      books
    group by
      author_id
    having count(*) > 5
  )
select
  a.first_name,
  a.last_name,
  t.book_count
from
  authors as a
  join top_authors as t on a.id = t.author_id
order by
  t.book_count desc;
"
`;

exports[`shared fixtures > select/joins.sql 1`] = `
"select
  b.id,
  b.title,
  a.first_name,
  a.last_name
from
  books as b
  join authors as a on b.author_id = a.id;

select
  b.title,
  a.first_name
from
  books as b
  left join authors as a on b.author_id = a.id
where a.id is null;

select
  b.title,
  a.first_name
from
  books as b
  full join authors as a on b.author_id = a.id;
"
`;

exports[`shared fixtures > select/subqueries.sql 1`] = `
"select
  id,
  title
from
  books
where (
  select
    id
  from
    authors
  where country = 'USA'
);

select
  id,
  title
from
  books
where exists (
  select
    1
  from
    order_items
  where order_items.book_id = books.id
);

select
  id,
  title
from
  books
where
  not (
    select
      author_id
    from
      banned_authors
  );
"
`;
